@@ -5,6 +5,7 @@ Version 2.6.2
 * Some compiler warning fixes
 * Some cppcheck results from Martin Ettl
 * Fix usage of RCfreqId
+* Don't fail to set proper .jobmatrix filename when not running sniffer
 
 Version 2.6.1
 * makefits: copy jobmatrix file
